--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     implementation 'org.osmdroid:osmdroid-android:6.1.2'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
