--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
     implementation 'org.osmdroid:osmdroid-android:6.1.2'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'joda-time:joda-time:2.10.5'
 }
