--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.altillimity.satpredict">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"  />
 
@@ -23,6 +24,9 @@
             android:parentActivityName=".activities.MenuActivity">
         </activity>
         <activity android:name=".activities.MapActivity"
+            android:parentActivityName=".activities.MenuActivity">
+        </activity>
+        <activity android:name=".activities.ConfigActivity"
             android:parentActivityName=".activities.MenuActivity">
         </activity>
     </application>
